fix spacing of button inside paragraph

--- a/scss/_base_button.scss
+++ b/scss/_base_button.scss
@@ -60,12 +60,12 @@
     }
 
     p + p > & {
-      margin-top: $spv-inter--condensed-scaleable - $spv-nudge;
+      margin-top: $spv-inter--condensed - $spv-nudge;
     }
 
     @media only screen and (max-width: $breakpoint-x-small) {
       p & + & {
-        margin-top: $spv-inter--condensed-scaleable + $spv-nudge-compensation;
+        margin-top: $spv-inter--condensed + $spv-nudge-compensation;
       }
     }
   }
